# Clinique

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  API_REFERENCE.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  LICENSE  Makefile  PRE_COMMIT_SETUP.md  QUICK_START.md  README.md  TROUBLESHOOTING.md  docker-compose.yml
.github/: FUNDING.yml  dependabot.yml  labeler.yml  pull_request_template.md
CliniqueFront/: Dockerfile  README.md  package-lock.json  package.json  vite.config.js
backend/: .env.example  Dockerfile  conftest.py  db.sqlite3  pyproject.toml  pytest.ini  requirements.txt  tests_api.py
backend/clinique/: settings.py  urls.py
backend/consultations/: models.py  serializers.py
backend/consultations/migrations/: 0001_initial.py  0002_initial.py  0003_initial.py
backend/dossiers_medical/: admin.py  urls.py  views.py
backend/dossiers_medical/migrations/: 0001_initial.py
backend/patients/: admin.py  models.py
backend/prescription_details/: admin.py  serializers.py  urls.py  views.py
backend/prescription_details/migrations/: 0001_initial.py
backend/prescriptions/: models.py  urls.py
backend/prescriptions/migrations/: 0001_initial.py
backend/rendez_vous/: admin.py  models.py  services.py  urls.py
backend/rendez_vous/migrations/: 0001_initial.py
backend/session/migrations/: 0001_initial.py  0002_initial.py
backend/utilisateurs/: admin.py  models.py  test_models.py  views.py
backend/utilisateurs/migrations/: 0001_initial.py
clinique/: conftest.py  pytest.ini  requirements.txt
frontend/: .prettierrc  (+5 more)
(+75 files in other folders)
