[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clinique"
version = "1.0.0"
description = "Platform de gestion de clinique médicale"
readme = "README.md"
authors = [{name = "LeuzThiam", email = "your-email@example.com"}]
license = {text = "MIT"}
requires-python = ">=3.10"

[tool.black]
line-length = 100
target-version = ['py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # répertoires
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | migrations
)/
'''

[tool.isort]
profile = "black"
line_length = 100
skip_glob = ["*/migrations/*"]
known_django = "django"
known_third_party = "rest_framework"
sections = ["FUTURE", "STDLIB", "DJANGO", "THIRD_PARTY", "FIRSTPARTY", "LOCALFOLDER"]

[tool.flake8]
max-line-length = 100
exclude = [".git", "__pycache__", "venv", ".venv", "migrations"]
ignore = ["E203", "W503"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "clinique.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
testpaths = [""]
